--- a/Designer/Interface/Data/TypeEditor.xaml
+++ b/Designer/Interface/Data/TypeEditor.xaml
@@ -45,55 +45,107 @@
 		<RadioButton IsChecked="{Binding Path=OpenType.TypeMode, Converter={StaticResource ClassTypeConverter}}" Grid.Column="4" Content="Class" Margin="5" Visibility="{Binding Path=CanSetType, Converter={StaticResource BoolVisibilityConverter}, ConverterParameter='True'}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="ClassType_Checked" />
 		<RadioButton IsChecked="{Binding Path=OpenType.TypeMode, Converter={StaticResource StructTypeConverter}}" Grid.Column="5" Content="Struct" Margin="5" Visibility="{Binding Path=CanSetType, Converter={StaticResource BoolVisibilityConverter}, ConverterParameter='True'}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="StructType_Checked" />
 		<pc:TextBox Text="{Binding Path=OpenType.Name, FallbackValue='', UpdateSourceTrigger=PropertyChanged}" Grid.Column="6" LabelText="Name" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
-		<Grid Grid.Row="1" Grid.ColumnSpan="7" Visibility="{Binding Path=IsKeyboardFocusWithin, Converter={StaticResource BoolVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" >
+		<Grid x:Name="InheritedTypesGrid" Grid.Row="1" Grid.ColumnSpan="7" Visibility="Collapsed" >
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*" />
-				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="150" />
 			</Grid.ColumnDefinitions>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
-			<Data:TypeSelector x:Name="SelectInheritedType" LabelText="Select Inherited Type" Grid.Column="0" Grid.Row="1" Margin="5" IsInheriting="True" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
+			<Data:TypeSelector x:Name="SelectInheritedType" LabelText="Select Inherited Type" Grid.Column="0" Margin="5" IsInheriting="True" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
 			<Button Content="Add Inherited Type" Grid.Column="1" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Click="AddInheritedType_Click" />
+			<ListBox x:Name="InheritedTypes" Grid.Row="1" Grid.ColumnSpan="2" ItemsSource="{Binding Path=OpenType.InheritedTypes}" Margin="5" Padding="0" Background="Transparent" BorderBrush="{StaticResource DefaultBorderColor}" Visibility="Collapsed" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"> 
+				<ListBox.ItemsPanel>
+					<ItemsPanelTemplate>
+						<WrapPanel Orientation="Horizontal" IsItemsHost="True" />
+					</ItemsPanelTemplate>
+				</ListBox.ItemsPanel>
+				<ListBox.ItemTemplate>
+					<DataTemplate DataType="Projects:DataType">
+						<Border Name="BG" Background="Transparent" BorderBrush="Transparent" BorderThickness="1" CornerRadius="0">
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="*" />
+									<ColumnDefinition Width="20" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="22" />
+								</Grid.RowDefinitions>
+								<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
+								<Button Name="DeleteSelectedInheritedType" Grid.Column="1" Grid.RowSpan="2" Margin="0" Click="DeleteSelectedInheritedType_Click" Padding="0" Visibility="Hidden" Background="Transparent">
+									<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+								</Button>
+							</Grid>
+						</Border>
+						<DataTemplate.Triggers>
+							<DataTrigger Binding="{Binding Path=TypeMode}" Value="Class">
+								<Setter TargetName="DataTypeName" Property="FontWeight" Value="Bold" />
+							</DataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True">
+								<Setter TargetName="BG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
+								<Setter TargetName="DeleteSelectedInheritedType" Property="Visibility" Value="Visible" />
+							</DataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True">
+								<Setter TargetName="BG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
+								<Setter TargetName="DeleteSelectedInheritedType" Property="Visibility" Value="Visible" />
+							</DataTrigger>
+						</DataTemplate.Triggers>
+					</DataTemplate>
+				</ListBox.ItemTemplate>
+			</ListBox>
 		</Grid>
-		<ListBox x:Name="InheritedTypes" Grid.Row="2" Grid.ColumnSpan="7" ItemsSource="{Binding Path=OpenType.InheritedTypes}" Margin="5" Padding="0" Background="Transparent" BorderBrush="{StaticResource DefaultBorderColor}" Visibility="Collapsed" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"> 
-			<ListBox.ItemsPanel>
-				<ItemsPanelTemplate>
-					<WrapPanel Orientation="Horizontal" IsItemsHost="True" />
-				</ItemsPanelTemplate>
-			</ListBox.ItemsPanel>
-			<ListBox.ItemTemplate>
-				<DataTemplate DataType="Projects:DataType">
-					<Border Name="BG" Background="Transparent" BorderBrush="Transparent" BorderThickness="1" CornerRadius="0">
-						<Grid>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" />
-								<ColumnDefinition Width="20" />
-							</Grid.ColumnDefinitions>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="22" />
-							</Grid.RowDefinitions>
-							<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
-							<Button Name="DeleteSelectedInheritedType" Grid.Column="1" Grid.RowSpan="2" Margin="0" Click="DeleteSelectedInheritedType_Click" Padding="0" Visibility="Hidden" Background="Transparent">
-								<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-							</Button>
-						</Grid>
-					</Border>
-					<DataTemplate.Triggers>
-						<DataTrigger Binding="{Binding Path=TypeMode}" Value="Class">
-							<Setter TargetName="DataTypeName" Property="FontWeight" Value="Bold" />
-						</DataTrigger>
-						<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True">
-							<Setter TargetName="BG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
-							<Setter TargetName="DeleteSelectedInheritedType" Property="Visibility" Value="Visible" />
-						</DataTrigger>
-						<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True">
-							<Setter TargetName="BG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
-							<Setter TargetName="DeleteSelectedInheritedType" Property="Visibility" Value="Visible" />
-						</DataTrigger>
-					</DataTemplate.Triggers>
-				</DataTemplate>
-			</ListBox.ItemTemplate>
-		</ListBox>
+		<Grid x:Name="KnownTypesGrid" Grid.Row="2" Grid.ColumnSpan="7" Visibility="Collapsed" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="150" />
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
+			</Grid.RowDefinitions>
+			<Data:TypeSelector x:Name="SelectKnownType" LabelText="Select Known Type" Grid.Column="0" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
+			<Button Content="Add Known Type" Grid.Column="1" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Click="AddKnownType_Click" />
+			<ListBox x:Name="KnownTypes" Grid.Row="1" Grid.ColumnSpan="2" ItemsSource="{Binding Path=OpenType.KnownTypes}" Margin="5" Padding="0" Background="Transparent" BorderBrush="{StaticResource DefaultBorderColor}" Visibility="Collapsed" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+				<ListBox.ItemsPanel>
+					<ItemsPanelTemplate>
+						<WrapPanel Orientation="Horizontal" IsItemsHost="True" />
+					</ItemsPanelTemplate>
+				</ListBox.ItemsPanel>
+				<ListBox.ItemTemplate>
+					<DataTemplate DataType="Projects:DataType">
+						<Border Name="BG" Background="Transparent" BorderBrush="Transparent" BorderThickness="1" CornerRadius="0">
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="*" />
+									<ColumnDefinition Width="20" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="22" />
+								</Grid.RowDefinitions>
+								<TextBlock Name="DataTypeName" Text="{Binding Path=TypeName}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
+								<Button Name="DeleteSelectedKnownType" Grid.Column="1" Grid.RowSpan="2" Margin="0" Click="DeleteSelectedKnownType_Click" Padding="0" Visibility="Hidden" Background="Transparent">
+									<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+								</Button>
+							</Grid>
+						</Border>
+						<DataTemplate.Triggers>
+							<DataTrigger Binding="{Binding Path=TypeMode}" Value="Class">
+								<Setter TargetName="DataTypeName" Property="FontWeight" Value="Bold" />
+							</DataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True">
+								<Setter TargetName="BG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
+								<Setter TargetName="DeleteSelectedKnownType" Property="Visibility" Value="Visible" />
+							</DataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True">
+								<Setter TargetName="BG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
+								<Setter TargetName="DeleteSelectedKnownType" Property="Visibility" Value="Visible" />
+							</DataTrigger>
+						</DataTemplate.Triggers>
+					</DataTemplate>
+				</ListBox.ItemTemplate>
+			</ListBox>
+		</Grid>
 	</Grid>
 </ContentControl>
