--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -2,6 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:Data="clr-namespace:WCFArchitect.Interface.Data"
+	  xmlns:Docs="clr-namespace:WCFArchitect.Interface.Documentation"
 	  xmlns:pc="http://schemas.propsectivesoftware.com/pc"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -31,8 +32,17 @@
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
+		<RowDefinition Height="Auto" />
 	</Grid.RowDefinitions>
-	<Label Grid.Row="0" Content="{Binding Path=Element.DataName}" FontSize="14pt" />
+	<TextBlock Grid.Row="0" FontSize="14pt" >
+		<TextBlock.Text>
+			<MultiBinding StringFormat=" {0} {1} {2}">
+				<Binding Path="Element.DataScope" Converter="{StaticResource DataScopeNameConverter}" ConverterParameter='True' />
+				<Binding Path="Element.DataType.TypeName" />
+				<Binding Path="Element.DataName" />
+			</MultiBinding>
+		</TextBlock.Text>
+	</TextBlock>
 	<Grid Name="ServerGrid" Grid.Row="1" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="75" />
@@ -60,8 +70,8 @@
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
-		<ToggleButton Grid.Column="0" Margin="0,5,5,5" Content="Client:" Padding="2,0" IsChecked="{Binding Path=Element.HasClientType}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateClientTYpe" ToolTip="Tells WCF Architect to generate a different member type for the client." />
-		<ComboBox Grid.Column="1" Margin="5" SelectedIndex="{Binding Path=Element.ClientScope, Converter={StaticResource DataScopeConverter}}" VerticalContentAlignment="Center" Name="ClientScope" >
+		<ToggleButton Grid.Column="0" Margin="0,5,5,5" Content="Client:" Padding="2,0" IsChecked="{Binding Path=Element.HasClientType}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateClientType" ToolTip="Tells WCF Architect to generate a different member type for the client." Unchecked="GenerateClientType_Unchecked" />
+		<ComboBox Grid.Column="1" Margin="5" SelectedIndex="{Binding Path=Element.ClientScope, Converter={StaticResource DataScopeConverter}}" IsEnabled="{Binding Path=Element.HasClientType}" VerticalContentAlignment="Center" Name="ClientScope" >
 			<ComboBox.Items>
 				<ComboBoxItem Content="Public" />
 				<ComboBoxItem Content="Protected" />
@@ -70,8 +80,8 @@
 				<ComboBoxItem Content="Protected Internal" />
 			</ComboBox.Items>
 		</ComboBox>
-		<Data:TypeSelector Grid.Column="2" Margin="5" x:Name="ClientType" OpenType="{Binding Path=Element.ClientType}" Project="{Binding}" LabelText="Type" VerticalContentAlignment="Center" ToolTip="{Binding Path=Element.ClientType}"  />
-		<pc:TextBox Grid.Column="3" Margin="5,5,0,5" Name="ClientElementName" Text="{Binding Path=Element.ClientName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.ClientName}" />
+		<Data:TypeSelector Grid.Column="2" Margin="5" x:Name="ClientType" OpenType="{Binding Path=Element.ClientType}" Project="{Binding}" LabelText="Type" IsEnabled="{Binding Path=Element.HasClientType}" VerticalContentAlignment="Center" ToolTip="{Binding Path=Element.ClientType}"  />
+		<pc:TextBox Grid.Column="3" Margin="5,5,0,5" Name="ClientName" Text="{Binding Path=Element.ClientName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" IsEnabled="{Binding Path=Element.HasClientType}" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.ClientName}" />
 	</Grid>
 	<Grid Name="XAMLGrid" Grid.Row="3" >
 		<Grid.ColumnDefinitions>
@@ -80,7 +90,7 @@
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
-		<ToggleButton Grid.Column="0" Margin="0,5,5,5" Content="XAML:" Padding="2,0" IsChecked="{Binding Path=Element.HasXAMLType}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateXAMLBinding" ToolTip="Tells WCF Architect to generate a WPF binding for this member." />
+		<ToggleButton Grid.Column="0" Margin="0,5,5,5" Content="XAML:" Padding="2,0" IsChecked="{Binding Path=Element.HasXAMLType}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateXAMLBinding" ToolTip="Tells WCF Architect to generate a WPF binding for this member." Unchecked="GenerateXAMLBinding_Unchecked" />
 		<ComboBox Grid.Column="1" Margin="5" SelectedIndex="{Binding Path=Element.XAMLScope, Converter={StaticResource DataScopeConverter}}" VerticalContentAlignment="Center" Name="XAMLScope" >
 			<ComboBox.Items>
 				<ComboBoxItem Content="Public" />
@@ -91,7 +101,7 @@
 			</ComboBox.Items>
 		</ComboBox>
 		<Data:TypeSelector Grid.Column="2" Margin="5" x:Name="XAMLType" OpenType="{Binding Path=Element.XAMLType}" Project="{Binding}" LabelText="Type" VerticalContentAlignment="Center" ToolTip="{Binding Path=Element.XAMLType}"  />
-		<pc:TextBox Grid.Column="3" Margin="5,5,0,5" Name="XAMLElementName" Text="{Binding Path=Element.XAMLName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.XAMLName}" />
+		<pc:TextBox Grid.Column="3" Margin="5,5,0,5" Name="XAMLName" Text="{Binding Path=Element.XAMLName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.XAMLName}" />
 	</Grid>
 	<Grid Name="OptionsGrid" Grid.Row="4" Margin="0,5,0,0" >
 		<Grid.ColumnDefinitions>
@@ -131,4 +141,5 @@
 		<pc:TextBox Name="AttachedTargetTypes" Grid.Row="1" Grid.Column="1" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Path=Element.AttachedTargetTypes}" ToolTip="Please enter the Target Types as a common seperated list." />
 		<pc:TextBox Name="AttachedAttributeTypes" Grid.Row="1" Grid.Column="2" Margin="5,5,0,5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Path=Element.AttachedAttributeTypes}" ToolTip="Please enter the Attribute Types as a common seperated list." />
 	</Grid>
+	<Docs:Standard x:Name="Docs" Grid.Row="6" Margin="0,5,0,0" IsProperty="True" Documentation="{Binding Path=Element.Documentation}" />
 </Grid>
